fix package discovery

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,12 +11,15 @@ dependencies = [
     "aiosqlite>=0.20.0",
     "psycopg2-binary>=2.9.0",
     "uvicorn>=0.38.0",
-    "pydantic[email]>=3.12.3",
+    "pydantic[email]>=2.12.3",
     "sudoq",
 ]
 
 [dependency-groups]
 dev = ["ruff>=0.14.1"]
+
+[tool.setuptools]
+packages = ["app"]
 
 [tool.uv.sources]
 sudoq = { git = "https://github.com/nlsg/sudo-q" }
