Rename CI step from 'Setup' to 'build frontend'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           cd frontend
           npm ci
 
-      - name: Setup
+      - name: build frontend
         run: |
           cd frontend
           npm run build
